--- a/about.html
+++ b/about.html
@@ -207,7 +207,7 @@
                             <div class="position-relative">
                                 <img class="img-fluid w-100" src="img/team-1.jpg" alt="">
                                 <div class="position-absolute start-0 bottom-0 w-100 py-3 px-4" style="background: rgba(52, 173, 84, .85);">
-                                    <h4 class="text-white">Fresh Vegies</h4>
+                                    <h4 class="text-white">Fresh Vegetables</h4>
                                     <span class="text-white"></span>
                                 </div>
                             </div>
