--- a/product.html
+++ b/product.html
@@ -240,7 +240,7 @@
                             </div>
                             <div class="d-flex mb-2">
                                 <i class="bi bi-envelope-open text-white me-2"></i>
-                                <p class="text-white mb-0">Kapil@patrinaoverseas.Com</p>
+                                <p class="text-white mb-0">Kapil@Patrina Overseas.Com</p>
                             </div>
                             <div class="d-flex mb-2">
                                 <i class="bi bi-telephone text-white me-2"></i>
@@ -318,7 +318,7 @@
     </div>
     <div class="container-fluid bg-dark text-white py-4">
         <div class="container text-center">
-            <p class="mb-0">&copy; <a class="text-secondary fw-bold" href="#">yantraworld.in</a>. All Rights Reserved. Designed by <a class="text-secondary fw-bold" href="https://htmlcodex.com">HTML Codex</a></p>
+            <p class="mb-0">&copy; <a class="text-secondary fw-bold" href="#">yantraworld.in</a>. All Rights Reserved. Designed by <a class="text-secondary fw-bold" href="http://yantraworld.in">Patrina Overseas</a></p>
         </div>
     </div>
     <!-- Footer End -->
