--- a/contact.html
+++ b/contact.html
@@ -43,7 +43,7 @@
             <div class="col-lg-6">
                 <div class="d-flex align-items-center justify-content-center">
                     <a href="index.html" class="navbar-brand ms-lg-5">
-                        <h1 class="m-0 display-4 text-primary"><span class="text-secondary">Yantra</span>World</h1>
+                        <h1 class="m-0 display-4 text-primary"><img src="img/yantralogo.jpg" height="65"alt="logo"><span class="text-secondary">antra</span>World</h1>
                     </a>
                 </div>
             </div>
@@ -315,7 +315,7 @@
     <div class="container-fluid bg-dark text-white py-4">
         <div class="container text-center">
             <p class="mb-0">&copy; <a class="text-secondary fw-bold" href="#">yantraworld.in</a>. All Rights Reserved.
-                Designed by <a class="text-secondary fw-bold" href="http://yantraworld.in">Patrina Overseas</a></p>
+                Designed by <a class="text-secondary fw-bold" href="http://yantraworld.in">Patrina Overseas Llp</a></p>
         </div>
     </div>
     <!-- Footer End -->
