--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
                         </div>
                         <div class="ps-4">
                             <h5 class="text-white">Our Experience</h5>
-                            <h1 class="display-5 text-white mb-0" data-toggle="counter-up">12345</h1>
+                            <h1 class="display-5 text-white mb-0" data-toggle="counter-up">38768</h1>
                         </div>
                     </div>
                 </div>
@@ -224,7 +224,7 @@
                         </div>
                         <div class="ps-4">
                             <h5 class="text-white">Complete Project</h5>
-                            <h1 class="display-5 text-white mb-0" data-toggle="counter-up">452</h1>
+                            <h1 class="display-5 text-white mb-0" data-toggle="counter-up">45225</h1>
                         </div>
                     </div>
                 </div>
@@ -658,7 +658,7 @@
     </div>
     <div class="container-fluid bg-dark text-white py-4">
         <div class="container text-center">
-            <p class="mb-0">&copy; <a class="text-secondary fw-bold" href="#">yantraworld.in</a>. All Rights Reserved. Designed by <a class="text-secondary fw-bold" href="http://yantraworld.in">Patrina Overseas</a></p>
+            <p class="mb-0">&copy; <a class="text-secondary fw-bold" href="#">yantraworld.in</a>. All Rights Reserved. Designed by <a class="text-secondary fw-bold" href="http://yantraworld.in">Patrina Overseas Llp</a></p>
         </div>
     </div>
     <!-- Footer End -->
