--- a/about.html
+++ b/about.html
@@ -35,8 +35,8 @@
         <div class="row gx-5 py-3 align-items-center">
             <div class="col-lg-3">
                 <div class="d-flex align-items-center justify-content-start">
-                    <i class="bi bi-phone-vibrate fs-1 text-primary me-2"></i>
-                    <h2 class="mb-0">8826155190</h2>
+                    <!-- <i class="bi bi-phone-vibrate fs-1 text-primary me-2"></i>
+                    <h2 class="mb-0">8826155190</h2> -->
                 </div>
             </div>
             <div class="col-lg-6">
