--- a/about.html
+++ b/about.html
@@ -284,11 +284,11 @@
                             </div>
                             <div class="d-flex mb-2">
                                 <i class="bi bi-envelope-open text-white me-2"></i>
-                                <p class="text-white mb-0">Kapil@Patrina Overseas.Com</p>
+                                <p class="text-white mb-0">hr@yantraworld.in</p>
                             </div>
                             <div class="d-flex mb-2">
-                                <i class="bi bi-telephone text-white me-2"></i>
-                                <p class="text-white mb-0">8826155190</p>
+                                <!-- <i class="bi bi-telephone text-white me-2"></i>
+                                <p class="text-white mb-0">8826155190</p> -->
                             </div>
                             <div class="d-flex mt-4">
                                 <a class="btn btn-secondary btn-square rounded-circle me-2" href="#"><i class="fab fa-twitter"></i></a>
