--- a/contact.html
+++ b/contact.html
@@ -186,17 +186,17 @@
                             </div>
                             <div class="ps-3">
                                 <h5 class="text-white">Email Us</h5>
-                                <span class="text-white">Kapil@Patrina Overseas.Com</span>
+                                <span class="text-white">hr@yantraworld.in</span>
                             </div>
                         </div>
                         <div class="d-flex">
-                            <div class="bg-primary rounded-circle d-flex align-items-center justify-content-center"
+                            <!-- <div class="bg-primary rounded-circle d-flex align-items-center justify-content-center"
                                 style="width: 60px; height: 60px;">
                                 <i class="bi bi-phone-vibrate fs-4 text-white"></i>
-                            </div>
+                            </div> -->
                             <div class="ps-3">
-                                <h5 class="text-white">Call Us</h5>
-                                <span class="text-white">8826155190</span>
+                                <!-- <h5 class="text-white">Call Us</h5>
+                                <span class="text-white">8826155190</span> -->
                             </div>
                         </div>
                     </div>
@@ -222,11 +222,11 @@
                             </div>
                             <div class="d-flex mb-2">
                                 <i class="bi bi-envelope-open text-white me-2"></i>
-                                <p class="text-white mb-0">Kapil@Patrina Overseas.Com</p>
+                                <p class="text-white mb-0">hr@yantraworld.in</p>
                             </div>
                             <div class="d-flex mb-2">
-                                <i class="bi bi-telephone text-white me-2"></i>
-                                <p class="text-white mb-0">8826155190</p>
+                                <!-- <i class="bi bi-telephone text-white me-2"></i>
+                                <p class="text-white mb-0">8826155190</p> -->
                             </div>
                             <div class="d-flex mt-4">
                                 <a class="btn btn-secondary btn-square rounded-circle me-2" href="#"><i
