--- a/contact.html
+++ b/contact.html
@@ -169,14 +169,14 @@
                     <div class="bg-secondary h-100 p-5">
                         <h2 class="text-white mb-4">Get In Touch</h2>
                         <div class="d-flex mb-4">
-                            <div class="bg-primary rounded-circle d-flex align-items-center justify-content-center"
+                            <!-- <div class="bg-primary rounded-circle d-flex align-items-center justify-content-center"
                                 style="width: 60px; height: 60px;">
                                 <i class="bi bi-geo-alt fs-4 text-white"></i>
-                            </div>
+                            </div> -->
                             <div class="ps-3">
-                                <h5 class="text-white">Our Office</h5>
+                                <!-- <h5 class="text-white">Our Office</h5>
                                 <span class="text-white">Plot No. 297, PH-6, Sector-37 P-2, Gurugram, Gurugram Haryana
-                                    122001</span>
+                                    122001</span> -->
                             </div>
                         </div>
                         <div class="d-flex mb-4">
@@ -216,9 +216,9 @@
                         <div class="col-lg-4 col-md-12 pt-5 mb-5">
                             <h4 class="text-white mb-4">Get In Touch</h4>
                             <div class="d-flex mb-2">
-                                <i class="bi bi-geo-alt text-white me-2"></i>
+                                <!-- <i class="bi bi-geo-alt text-white me-2"></i>
                                 <p class="text-white mb-0">Plot No. 297, PH-6, Sector-37 P-2, Gurugram, Gurugram Haryana
-                                    122001</p>
+                                    122001</p> -->
                             </div>
                             <div class="d-flex mb-2">
                                 <i class="bi bi-envelope-open text-white me-2"></i>
@@ -314,8 +314,8 @@
     </div>
     <div class="container-fluid bg-dark text-white py-4">
         <div class="container text-center">
-            <p class="mb-0">&copy; <a class="text-secondary fw-bold" href="#">yantraworld.in</a>. All Rights Reserved.
-                Designed by <a class="text-secondary fw-bold" href="http://yantraworld.in">Patrina Overseas Llp</a></p>
+            <p class="mb-0">&copy; All Rights Reserved.<a class="text-secondary fw-bold" href="#"></a> 
+                Designed by <a class="text-secondary fw-bold" href="http://yantraworld.in"> yantraworld.in</a></p>
         </div>
     </div>
     <!-- Footer End -->
