--- a/about.html
+++ b/about.html
@@ -279,8 +279,8 @@
                         <div class="col-lg-4 col-md-12 pt-5 mb-5">
                             <h4 class="text-white mb-4">Get In Touch</h4>
                             <div class="d-flex mb-2">
-                                <i class="bi bi-geo-alt text-white me-2"></i>
-                                <p class="text-white mb-0">Plot No. 297, PH-6, Sector-37 P-2, Gurugram, Gurugram Haryana 122001</p>
+                                <!-- <i class="bi bi-geo-alt text-white me-2"></i>
+                                <p class="text-white mb-0">Plot No. 297, PH-6, Sector-37 P-2, Gurugram, Gurugram Haryana 122001</p> -->
                             </div>
                             <div class="d-flex mb-2">
                                 <i class="bi bi-envelope-open text-white me-2"></i>
@@ -362,7 +362,7 @@
     </div>
     <div class="container-fluid bg-dark text-white py-4">
         <div class="container text-center">
-            <p class="mb-0">&copy; <a class="text-secondary fw-bold" href="#">yantraworld.in</a>. All Rights Reserved. Designed by <a class="text-secondary fw-bold" href="http://yantraworld.in">Patrina Overseas Llp</a></p>
+            <p class="mb-0">&copy; All Rights Reserved.<a class="text-secondary fw-bold" href="#"></a> Designed by <a class="text-secondary fw-bold" href="http://yantraworld.in">yantraworld.in</a></p>
         </div>
     </div>
     <!-- Footer End -->
