--- a/index.html
+++ b/index.html
@@ -201,8 +201,8 @@
                             <i class="fa fa-star fs-4 text-white"></i>
                         </div>
                         <div class="ps-4">
-                            <h5 class="text-white">Our Experience</h5>
-                            <h1 class="display-5 text-white mb-0" data-toggle="counter-up">38768</h1>
+                            <h5 class="text-white">Orders</h5>
+                            <h1 class="display-5 text-white mb-0" data-toggle="counter-up">2000000</h1>
                         </div>
                     </div>
                 </div>
