--- a/about.html
+++ b/about.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>e-commerce website</title>
+    <link rel="icon" href="favicon.png" type="image/x-icon">
 
     <!-- font-awesome cdn link -->
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" />
@@ -134,7 +135,7 @@
         </div>
         <div class="col">
             <h4>My Account</h4>
-            <a href="#">Sign In</a>
+            <!-- <a href="#">Sign In</a> -->
             <a href="#">View Cart</a>
             <a href="#">My Wishlist</a>
             <a href="#">Track My Order</a>
