Yantra World Team

--- a/blog.html
+++ b/blog.html
@@ -172,7 +172,7 @@
             <img src="images/pay/pay.png" alt="">
         </div>
         <div class="copyright">
-            <p>Created By Muhammad Awais | All Rights Reserved | &#169; 2023</p>
+            <p>Created By Yantra World Team | All Rights Reserved | &#169; 2023</p>
         </div>
     </footer>
 
