--- a/index.html
+++ b/index.html
@@ -686,7 +686,7 @@
                         <i class="bi bi-globe-americas"></i>
                     </div>
                     <div class="col-11">
-                        <p>codingpawan.com</p>
+                        <p>yantraworld.in</p>
                     </div>
                 </div>
             </div>
