--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                     </li> -->
                 </ul>
             </div>
-            <button class="c-btn ms-4 py-2 px-4 rounded-pill d-none d-md-block">Contact</button>
+            <a href="contact" class="c-btn ms-4 py-2 px-4 rounded-pill d-none d-md-block text-decoration-none">Contact</a>
         </div>
     </nav>
     <!-- navbar ends here -->
@@ -734,7 +734,7 @@
 
     <!-- footer section starts  -->
     <footer class="text-center text-muted py-4">
-        <h3 class="text-white pt-4" data-aos="fade-up">Portfolio</h3>
+        <h3 class="text-white pt-4" data-aos="fade-up">GenAI</h3>
         <div class="link-group mt-5" data-aos="fade-up">
             <a href="#home">Home</a>
             <div class="vr"></div>
