--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                         <a class="nav-link" aria-current="page" href="#">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#service">Service</a>
+                        <a class="nav-link" href="#product">Product</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#about">About</a>
@@ -91,12 +91,12 @@
     <!-- home section ends here -->
 
     <!-- expertise section starts -->
-    <section class="expertise mt-5" id="service">
+    <section class="expertise mt-5" id="product">
         <div class="heading text-center">
             <small>Our Expertise</small>
             <h3>
                 Provide Wide Range of <br />
-                Digital Services
+                Digital Products
             </h3>
         </div>
         <div class="row justify-content-evenly mt-5">
@@ -752,7 +752,7 @@
             <div class="vr"></div>
             <a href="#about">About</a>
             <div class="vr"></div>
-            <a href="#service">Service</a>
+            <a href="#product">Product</a>
             <div class="vr"></div>
             <a href="#portfolio">Portfolio</a>
             <div class="vr"></div>
