--- a/index.html
+++ b/index.html
@@ -73,16 +73,16 @@
         <div class="row justify-content-evenly align-middle">
             <div class="col-10 col-md-6 text-center text-md-start" data-aos="slide-right">
                 <h2 style="color: #3f396d">
-                    Powering the Future with <br /><span class="c-orange">GenAI Solutions</span>
+                    Powering the Future with <br /><span class="c-orange">GenAI Products</span>
                 </h2>
                 <p class="text-muted">
-                    We specialize in <strong>GenAI solutions</strong> using cutting-edge technologies like
+                    We specialize in <strong>GenAI Products</strong> using cutting-edge technologies like
                     <strong>LLMs</strong> (Hugging Face, OpenAI GPT) and frameworks like Python, React, and Angular.
-                    Let’s create scalable, responsive, and innovative AI-powered solutions.
+                    Let’s create scalable, responsive, and innovative AI-powered products.
                 </p>
             </div>
             <div class="col-10 col-md-4 d-none d-md-block">
-                <img src="images/banner1.jpg" class="img-fluid" alt="AI solutions banner" />
+                <img src="images/banner1.jpg" class="img-fluid" alt="AI products banner" />
             </div>
         </div>
     </section>
@@ -94,60 +94,95 @@
         <div class="heading text-center">
             <small>Our Expertise</small>
             <h3>
-                Provide Wide Range of <br />
-                Digital Products
+                Revolutionizing Industries with <br />
+                Advanced Digital Products
             </h3>
         </div>
         <div class="row justify-content-evenly mt-5">
-            <!-- Gen AI -->
+            <!-- Agentic BOT -->
             <div class="col-10 col-md-4" data-aos="fade-up">
                 <div class="service-card">
                     <div class="img">
-                        <img src="images/service-icon1.png" class="w-25 img-fluid img" alt="Gen AI" />
+                        <img src="images/service-icon1.png" class="w-25 img-fluid img" alt="Agentic BOT" />
                     </div>
                     <div class="content mt-3">
-                        <h4>Generative AI</h4>
+                        <h4>Agentic BOT for Insurance, Sales & Workforce Management</h4>
                         <p class="text-muted">
-                            We specialize in cutting-edge Generative AI solutions that transform your business with
-                            intelligent automation, data analysis, and personalized user experiences.
+                            Experience the next level of automation with our Agentic BOTs designed for precision-driven 
+                            insurance operations, dynamic sales performance tracking, and comprehensive employee 
+                            management products. Leveraging state-of-the-art AI, these BOTs streamline processes 
+                            like never before.
                         </p>
                     </div>
                 </div>
             </div>
-            <!-- Web App Development -->
+            <!-- OpenAI LLM-based Chatbots -->
             <div class="col-md-4 col-10" data-aos="fade-up">
                 <div class="service-card">
                     <div class="img">
-                        <img src="images/service-icon2.png" class="w-25 img-fluid img" alt="Web Development" />
+                        <img src="images/service-icon2.png" class="w-25 img-fluid img" alt="LLM Chatbots" />
                     </div>
                     <div class="content mt-3">
-                        <h4>Web App Development</h4>
+                        <h4>OpenAI LLM-Powered Chatbots</h4>
                         <p class="text-muted">
-                            We build high-performance, responsive, and scalable web applications using modern frameworks
-                            like React, Angular, and Vue to ensure seamless user experiences.
+                            Unleash the full potential of conversational AI with our OpenAI-based LLM chatbots, including 
+                            top-tier examples like GPT-4. Our products redefine customer engagement and support automation, 
+                            delivering unparalleled accuracy, adaptability, and human-like interaction.
                         </p>
-
                     </div>
                 </div>
             </div>
-            <!-- Hosting & AI Chatbot -->
+            <!-- Digital Cloning -->
             <div class="col-md-4 col-10" data-aos="fade-up">
                 <div class="service-card">
                     <div class="img">
-                        <img src="images/service-icon3.png" class="w-25 img-fluid img" alt="Hosting & Chatbot" />
+                        <img src="images/service-icon3.png" class="w-25 img-fluid img" alt="Digital Clone" />
                     </div>
                     <div class="content mt-3">
-                        <h4>Agentic & LLMs Chatbot Integration</h4>
+                        <h4>Create Your Digital Clone</h4>
                         <p class="text-muted">
-                            We offer reliable hosting services and seamless integration of AI chatbots, enhancing
-                            customer interaction and automating support functions with AI-driven technology.
+                            Transform your digital presence with our cutting-edge technology for voice and video cloning. 
+                            Build an AI-powered digital twin that replicates your persona, offering seamless interaction 
+                            across voice, video, and text-based mediums.
                         </p>
-
+                    </div>
+                </div>
+            </div>
+            <!-- Video Avatar Creation -->
+            <div class="col-md-4 col-10 mt-4" data-aos="fade-up">
+                <div class="service-card">
+                    <div class="img">
+                        <img src="images/service-icon4.png" class="w-25 img-fluid img" alt="Video Avatar" />
+                    </div>
+                    <div class="content mt-3">
+                        <h4>Dynamic Video Avatar Creation</h4>
+                        <p class="text-muted">
+                            Step into the future with hyper-realistic video avatars of yourself. Perfect for personal branding, 
+                            customer interaction, and immersive digital experiences. Powered by advanced AI to mirror your 
+                            movements, expressions, and voice in stunning detail.
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <!-- Live Streaming -->
+            <div class="col-md-4 col-10 mt-4" data-aos="fade-up">
+                <div class="service-card">
+                    <div class="img">
+                        <img src="images/service-icon4.png" class="w-25 img-fluid img" alt="Live Streaming" />
+                    </div>
+                    <div class="content mt-3">
+                        <h4>Ultra-Low Latency Live Streaming</h4>
+                        <p class="text-muted">
+                            Redefine live interactions with our ultra-low latency audio, video, and text streaming technology. 
+                            From corporate webinars to interactive events, our platform ensures real-time engagement with 
+                            unparalleled speed and reliability.
+                        </p>
                     </div>
                 </div>
             </div>
         </div>
     </section>
+    
 
     <!-- expertise section ends here -->
 
@@ -158,7 +193,7 @@
             <div class="col-10 col-md-6 skill-with-background" data-aos="slide-right">
                 <h3 class="text-center mb-4" style="color: #3f396d;">Our Expertise</h3>
                 <p class="text-center text-muted mb-5">
-                    We offer ready-made, plug-and-play solutions that can be seamlessly integrated into your website or
+                    We offer ready-made, plug-and-play products that can be seamlessly integrated into your website or
                     application.
                 </p>
                 <div class="row justify-content-evenly">
@@ -174,10 +209,10 @@
                     </div>
                 </div>
                 <div class="row justify-content-evenly">
-                    <!-- Skill 3: Cloud Solutions -->
+                    <!-- Skill 3: Cloud Products -->
                     <div class="col-10 col-md-6 mb-4 text-center">
                         <img class="img-fluid rounded-5 ht-130" src="images/cloud.png" alt="Cloud" />
-                        <h5 class="mt-3">Cloud Solutions</h5>
+                        <h5 class="mt-3">Cloud Products</h5>
                     </div>
                     <!-- Skill 4: Large Language Models -->
                     <div class="col-10 col-md-6 mb-4 text-center">
@@ -191,10 +226,10 @@
             <div class="col-10 col-md-5 skill-detail" data-aos="slide-left">
                 <div class="heading mt-5 mt-md-3">
                     <small>Our Offerings</small>
-                    <h3>Plug-and-Play AI Solutions</h3>
+                    <h3>Plug-and-Play AI Products</h3>
                     <p class="text-muted">
                         Unlock the power of AI with our pre-built APIs and tools. From OpenAI's GPT models to LangChain
-                        frameworks and cloud integrations, we have solutions tailored to your needs.
+                        frameworks and cloud integrations, we have products tailored to your needs.
                     </p>
                     <p class="text-muted">
                         Simplify your workflow with our ready-to-deploy tech, designed for seamless API integration into
@@ -208,6 +243,92 @@
         </div>
     </section>
     <!-- skill section end here -->
+    <section class="portfolio" id="portfolio">
+        <div class="heading text-center pt-5">
+            <small>Our Work</small>
+            <h3>Explore Our Portfolio</h3>
+        </div>
+        <div id="myBtnContainer" class="text-center mt-4">
+            <!-- Custom filtering for showcasing our expertise -->
+            <button class="filter-item" data-filter="all">All</button>
+            <button class="filter-item" data-filter="agentic">Agentic Products</button>
+            <button class="filter-item" data-filter="chatbot">Chatbot Innovations</button>
+            <button class="filter-item" data-filter="clone">Digital Clone</button>
+            <button class="filter-item" data-filter="avatar">Video Avatar</button>
+        </div>
+        <div class="portfolio-body">
+            <div class="row justify-content-evenly px-4">
+                <!-- Agentic BOT -->
+                <div class="post col-md-4 agentic all col-10 mt-3 mt-md-0" data-aos="fade-up">
+                    <div class="card">
+                        <img src="images/2048game.png" class="card-img-top" alt="Agentic BOT Products" />
+                        <div class="card-body text-center">
+                            <h4 class="card-title">Agentic BOT with Insurance & Sales</h4>
+                            <span class="badge bg-secondary badge-pill">AI</span>
+                            <span class="badge bg-secondary badge-pill">Sales Automation</span>
+                            <span class="badge bg-secondary badge-pill mb-2">Employee Management</span><br />
+                            <p>Redefine enterprise efficiency with our hyper-intelligent Agentic BOT—designed to manage insurance workflows, boost sales pipelines, and streamline employee operations with unmatched precision.</p>
+                        </div>
+                    </div>
+                </div>
+                <!-- Chatbot Innovations -->
+                <div class="post col-md-4 chatbot all col-10 mt-3 mt-md-0" data-aos="fade-up">
+                    <div class="card">
+                        <img src="images/currency-converter.png" class="card-img-top" alt="Chatbot Innovation" />
+                        <div class="card-body text-center">
+                            <h4 class="card-title">Chatbots Powered by OpenAI LLMs</h4>
+                            <span class="badge bg-secondary badge-pill">Generative AI</span>
+                            <span class="badge bg-secondary badge-pill">OpenAI</span>
+                            <span class="badge bg-secondary badge-pill mb-2">LLM</span><br />
+                            <p>Experience cutting-edge chatbot technology with advanced OpenAI LLM integration, delivering top-tier conversational intelligence, real-time adaptability, and unparalleled user satisfaction.</p>
+                        </div>
+                    </div>
+                </div>
+                <!-- Digital Clone -->
+                <div class="post col-md-4 clone all col-10 mt-3 mt-md-0" data-aos="fade-up">
+                    <div class="card">
+                        <img src="images/dictionary.png" class="card-img-top" alt="Digital Clone" />
+                        <div class="card-body text-center">
+                            <h4 class="card-title">Your Digital Clone: Voice & Video</h4>
+                            <span class="badge bg-secondary badge-pill">AI</span>
+                            <span class="badge bg-secondary badge-pill">Voice Cloning</span>
+                            <span class="badge bg-secondary badge-pill mb-2">Video Cloning</span><br />
+                            <p>Create your own digital twin with advanced AI-powered voice and video cloning. From professional avatars to personal branding, the possibilities are limitless.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row justify-content-evenly mt-4 px-4">
+                <!-- Video Avatar -->
+                <div class="post col-md-4 avatar all col-10 mt-3 mt-md-0" data-aos="fade-up">
+                    <div class="card">
+                        <img src="images/piceditor.png" class="card-img-top" alt="Video Avatar Creation" />
+                        <div class="card-body text-center">
+                            <h4 class="card-title">AI-Powered Video Avatars</h4>
+                            <span class="badge bg-secondary badge-pill">AI</span>
+                            <span class="badge bg-secondary badge-pill">Video Avatars</span>
+                            <span class="badge bg-secondary badge-pill mb-2">Personalization</span><br />
+                            <p>Revolutionize interaction with dynamic video avatars, enabling lifelike digital representations for virtual meetings, content creation, and immersive experiences.</p>
+                        </div>
+                    </div>
+                </div>
+                <!-- Live Streaming -->
+                <div class="post col-md-4 avatar all col-10 mt-3 mt-md-0" data-aos="fade-up">
+                    <div class="card">
+                        <img src="images/tictactoe.png" class="card-img-top" alt="Live Streaming Products" />
+                        <div class="card-body text-center">
+                            <h4 class="card-title">Live Streaming at Low Latency</h4>
+                            <span class="badge bg-secondary badge-pill">Real-Time</span>
+                            <span class="badge bg-secondary badge-pill">Audio/Video</span>
+                            <span class="badge bg-secondary badge-pill mb-2">Low Latency</span><br />
+                            <p>Deliver high-definition audio, video, and text streams with our state-of-the-art live streaming products, optimized for unparalleled speed and minimal latency.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    
     <!-- portfolio section starts here -->
     <section class="portfolio" id="portfolio">
         <div class="heading text-center pt-5">
@@ -229,7 +350,7 @@
                     <div class="card">
                         <img src="images/2048game.png" class="card-img-top" alt="Generative AI" />
                         <div class="card-body text-center">
-                            <h4 class="card-title">Generative AI Solutions</h4>
+                            <h4 class="card-title">Generative AI Products</h4>
                             <span class="badge bg-secondary badge-pill">AI</span>
                             <span class="badge bg-secondary badge-pill">Machine Learning</span>
                             <span class="badge bg-secondary badge-pill mb-2">Generative AI</span><br />
@@ -381,7 +502,7 @@
                                     </div>
                                     <div class="col-10">
                                         <p class="text-muted">
-                                            "Their solutions have been a game-changer for our ed-tech platform. From API
+                                            "Their products have been a game-changer for our ed-tech platform. From API
                                             integration to deployment, the process was smooth and hassle-free. Truly a
                                             fantastic experience!"
                                         </p>
