--- a/index.html
+++ b/index.html
@@ -498,7 +498,7 @@
                             <textarea class="form-control" id="message" placeholder="Message" rows="5"></textarea>
                         </div>
                         <button type="submit" id="sendButton"
-                            class="c-btn h-btn mt-3 py-3 px-5 rounded-pill inactive btn" disabled>
+                            class="c-btn h-btn mt-3 py-3 px-5 rounded-pill inactive btn bg-primary" disabled>
                             Submit
                         </button>
                     </form>
