--- a/index.html
+++ b/index.html
@@ -508,12 +508,10 @@
         </div>
     </section>
     <!-- contact section ends here -->
-
-    <!-- now we will make back to top button when user click on it it will be redirected to top page  -->
-    <button type="button" class="btn btn-floating btn-lg rounded-pill" id="btn-back-to-top">
+    <button type="button" class="btn btn-lg btn-floating rounded-pill text-white bg-black cursor-pointer" id="btn-back-to-top" aria-label="Scroll to top">
         <i class="bi bi-arrow-up"></i>
     </button>
-
+    
     <!-- footer section starts  -->
     <footer class="text-center text-muted py-4">
         <h3 class="text-white pt-4" data-aos="fade-up">GenAI</h3>
