--- a/index.html
+++ b/index.html
@@ -564,7 +564,7 @@
             </div>
             <hr class="text-muted my-4" />
 
-            <p>Copyright 2025 yantraworld.in | All Rights Reserved.</p>
+            <p>Copyright 2025 Patrina Overseas LLP | All Rights Reserved.</p>
         </footer>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
