--- a/index.html
+++ b/index.html
@@ -476,7 +476,8 @@
                             <i class="bi bi-geo-alt-fill"></i>
                         </div>
                         <div class="col-11">
-                            <p>297, Udyog Vihar Industrial Area Phase VI, Sector 37, Gurugram, Haryana 122001(we are moving towards 100% remote.)</p>
+                            <p>297, Udyog Vihar Industrial Area Phase VI, Sector 37, Gurugram, Haryana 122001 </p>
+                            <p>(we are moving towards 100% remote.)</p>
                         </div>
                     </div>
                     <!-- <div class="row justify-content-evenly">
